--- a/package.json
+++ b/package.json
@@ -3,11 +3,25 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "lint": "eslint resources/js --ext .js,.vue --ignore-path .gitignore --fix"
     },
     "devDependencies": {
+        "@inertiajs/vue3": "^1.0.14",
+        "@tailwindcss/forms": "^0.5.7",
+        "@rushstack/eslint-patch": "^1.8.0",
+        "@tailwindcss/typography": "^0.5.10",
+        "@vitejs/plugin-vue": "^5.0.0",
+        "autoprefixer": "^10.4.16",
+        "@vue/eslint-config-prettier": "^9.0.0",
         "axios": "^1.7.4",
+        "eslint": "^8.57.0",
+        "eslint-plugin-vue": "^9.23.0",
         "laravel-vite-plugin": "^1.0",
-        "vite": "^5.0"
+        "prettier": "^3.3.0",
+        "prettier-plugin-organize-imports": "^4.0.0",
+        "prettier-plugin-tailwindcss": "^0.6.5",
+        "vite": "^5.0",
+        "vue": "^3.4.0"
     }
 }
